v1.2.1
- Add French classifications

v1.2.0 (2016-01-27)
- Fix character encoding issue for file source section
- Add option to block system settings with a pin

v1.1.0 (2015-07-23)
- Add feature to restrict a given user/pin to set times and durations

v1.0.3 (2015-07-17)
- Fix bug where user higher than security level 1 cannot change pin
- Highlight which pin is not set when using multiple pins
- Prevent an already used pin being entered for a different security level

v1.0.2 (2015-06-22)
- Fix character encoding issue
- Do not check classifications of background videos

v1.0.1 (2015-06-15)
- Add More Classification Ratings
- Add default behaviour for unsupported certifications
- Add support for bulk security setting
- Add option to view videos protected by classification
- Add support for multiple security levels
- Add support for pins using just direction keys
- Allow a video restricted by classification to be excluded

v1.0.0 (2015-06-07)
- Initial Version