@@ -1,5 +1,7 @@
 v1.2.1
 - Add French classifications
+- Add screensaver option that triggers a prompt for the pin
+- Allow the pin to be prompted for on startup
 
 v1.2.0 (2016-01-27)
 - Fix character encoding issue for file source section
